# placementd

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.adoc  base.mk
common/: Cargo.toml
common/src/: db.rs  lib.rs
conf/defaults/: spark.manager.config.yml  spark.manager.service.yml  spark.manager.yml  spark.worker.yml
config/bundled/: README.adoc  spark.yml
contrib/: app.yml  kind.yml
develop/: 00_bootstrap.yml  01_postgresql.yml  10_placementd.yml  Makefile  copy-bins  placementd.yml  postgresql.yml
migrations/: Makefile
migrations/postgres/: 0_bootstrap.sql  20240215234640_tasks.sql  20240229200755_runs_fo_tasks.sql
src/: api.rs  dal.rs  main.rs
src/types/: databricks.rs  mod.rs  responses.rs
tests/: example-runs-submit.json
web/: Cargo.toml
web/src/: api.rs  main.rs
web/src/types/: databricks.rs  mod.rs  responses.rs
workers/kube-provisioner/: Cargo.toml
workers/kube-provisioner/src/: main.rs
