[package]
name = "placementd"
version = "0.1.0"
edition = "2021"
authors = ["R Tyler Croy <rtyler@brokenco.de>"]
description = "Placement service for neutron"
readme = "README.md"
license = "LICENSE"

[dependencies]
sqlx = { version = "0.7.3", features = ["runtime-async-std", "chrono", "json", "time", "uuid"] }
tide = { version = "0.16.0", features = []}

kube = { version = "0.88.1", features = ["runtime", "derive", "rustls-tls"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
futures = "0.3.30"
async-std = { version = "1.12.0", features = ["tokio1", "attributes"] }
serde = { version = "1.0.196", features = ["derive"] }
pretty_env_logger = "0.5.0"
#driftwood = "0.0.7"
chrono = "0.4.33"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
serde_yaml = "0.9.31"
dotenvy = "0.15.7"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde_json = "1.0.113"
anyhow = "1.0.80"

[features]
default = [
        "postgres",
        # Run our integration tests by default
        "integration",
        ]
integration = []
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dev-dependencies]
tide-testing = "0.1.3"

