[workspace]
resolver = "2"
members = [
        "common",
        "web/",
        "workers/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["R Tyler Croy <rtyler@brokenco.de>"]
description = "Placement service for neutron"
readme = "README.md"
license = "LICENSE"

[workspace.dependencies]
anyhow = "1.0.80"
async-std = { version = "1.12.0", features = ["tokio1", "attributes"] }
chrono = "0.4.33"
futures = "0.3.30"
sqlx = { version = "0.7.3", features = ["runtime-async-std", "chrono", "json", "postgres", "time", "uuid"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
