[package]
name = "placementd"
version.workspace = true
edition.workspace = true

[dependencies]
async-std = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

[features]
default = ["integration"]
integration = []
